<resources>
    <string name="app_name">CoChat</string>
    <string name="wl_app_name">CoChat</string>
    <string name="wl_title">Hello, Lets Chat</string>
    <string name="wl_subtitle">Connect with people all around\nthe world</string>
    <string name="wl_phone_number_txt">Your phone number</string>
    <string name="vo_title">Verification</string>
    <string name="vo_resend">Resend</string>
    <string name="vo_resend_text">Didn\'t receive a code?</string>
    <string name="su_title">What\'s your\nname?</string>
    <string name="su_proceed">Proceed</string>
    <string name="su_name_txt">Your full name</string>
    <string name="sp_title">Pick a profile picture</string>
    <string name="h_search_txt">Search</string>
    <string name="c_header_name">Select contact</string>
    <string name="c_menu_invite">Invite a friend</string>
    <string name="c_contacts_text">Contacts on CoChat</string>
    <string name="c_invite_text">Invite to CoChat</string>
    <string name="c_invite_user_card_button">Invite</string>
    <string name="ni_title">Oops!</string>
    <string name="ni_subtitle">There\'s no internet connection\nPlease check your internet\nconnection</string>
    <string name="ni_retry">Retry</string>
    <string name="ni_dismiss">Dismiss</string>
    <string name="p_header_name">Profile</string>
    <string name="p_bio_hint">Bio</string>
    <string name="p_username_hint">Name</string>
    <string name="p_phone_number_hint">Phone</string>
    <string name="cp_header_name">Change profile picture</string>
    <string name="cp_done">Done</string>
    <string name="cu_header_name">Change username</string>
    <string name="cu_name_txt_hint">*Maximum length is 20 characters</string>
    <string name="cb_header_name">Change bio</string>
    <string name="cb_bio_txt">Your bio</string>
    <string name="cb_bio_txt_hint">*Maximum length is 70 characters</string>
    <string name="ch_message_txt">Message</string>
    <string name="s_header_name">Settings</string>
    <string name="s_notifications_text">Push notifications</string>
    <string name="s_chat_background_text">Chat background</string>
    <string name="s_support_text">Support</string>
    <string name="s_log_out_text">Log out</string>
    <string name="c_back_header_name">Chat background</string>
    <string name="c_back_choose_text">Pick a background image</string>
    <string name="la_title">Log out</string>
    <string name="la_subtitle">You will be returned to the log in screen.</string>
    <string name="la_cancel">Cancel</string>
    <string name="la_log_out">Log out</string>
</resources>