<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpUserName">

    <ImageView
        android:id="@+id/su_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/back"
        app:elevation="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/su_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/cottorway_medium"
        android:text="@string/su_title"
        android:textColor="@color/primary_text"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_back"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/su_name_txt_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="#EEEEEE"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/su_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/su_name_txt"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cottorway_medium"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textSize="17sp"
            android:paddingVertical="17dp"
            android:hint="@string/su_name_txt"
            android:textColorHint="#687980"
            android:textColor="@color/primary_text"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/su_proceed"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:backgroundTintMode="screen"
        android:background="@drawable/btn_bg_proceed_disable"
        android:clickable="false"
        android:focusable="false"
        android:elevation="10dp"
        android:fontFamily="@font/cottorway_medium"
        android:foreground="@drawable/btn_proceed_ripple"
        android:padding="12dp"
        android:text="@string/su_proceed"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>