<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VerifyOtp">

    <TextView
        android:id="@+id/vo_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/cottorway_bold"
        android:text="@string/wl_app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vo_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/vo_app_logo"
        app:layout_constraintTop_toTopOf="@+id/vo_app_logo" />

    <ImageView
        android:id="@+id/vo_app_logo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/app_logo"
        app:elevation="12dp"
        app:layout_constraintEnd_toStartOf="@+id/vo_app_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vo_view_pager"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/vo_round_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vo_app_name"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:id="@+id/vo_round_card"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:optRoundCardBackgroundColor="@color/primary_color"
        app:optRoundCardCornerRadius="30dp"
        app:optRoundCardElevation="16dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardRightBottomCorner="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/vo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cottorway_bold"
                android:text="@string/vo_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vo_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cottorway_medium"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/vo_title"
                app:layout_constraintStart_toStartOf="@+id/vo_title"
                app:layout_constraintTop_toBottomOf="@+id/vo_title" />

            <com.chaos.view.PinView
                android:id="@+id/vo_pin_view"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@color/secondary_color"
                app:cursorColor="@color/white"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="70dp"
                app:itemRadius="6dp"
                app:itemSpacing="8dp"
                app:itemWidth="50dp"
                android:textSize="18sp"
                android:fontFamily="@font/cottorway_medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vo_subtitle"
                app:lineColor="@color/white"
                app:lineWidth="1dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/vo_resend_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/cottorway_medium"
                android:text="@string/vo_resend_text"
                android:textAlignment="center"
                android:textColor="@color/secondary_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/vo_resend"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vo_pin_view"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/vo_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/cottorway_medium"
                android:text="@string/vo_resend"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/vo_resend_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/vo_resend_text"
                app:layout_constraintTop_toTopOf="@+id/vo_resend_text"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>

</androidx.constraintlayout.widget.ConstraintLayout>